test_case/rust-lang_rust/38819_274578770.rs

-fn main() -> i32 { 0 } //~ ERROR E0308
+fn main() -> i32 { 0 } //~ ERROR E0579
